tests/test_proof/bad/output/enums-overlap.catala_en.Proof
[RESULT] [A.x] This variable never returns an empty error
TODO

